--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -10,7 +10,7 @@
 	transition: 0.5s ease-in-out;
 	transition-property: height, background;
 	position: fixed;
-	z-index: 1009000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000;
+	z-index: 100;
 	padding-top: 5px;
 	padding-left: 1rem;
 	padding-right: 1rem;
